fix grid overlaps over scroll wheel grid seems to be fixed

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -130,6 +130,7 @@ body {
 	height:100vh;
 	overflow: hidden;
 	position: absolute;
+	z-index: -10;
 }
 #grid{
 	position:absolute;		/* req'd for horiz center */
